lowered rcord font size to prevent horizontal overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
   color: #e7d31a;
   text-shadow: 1px 1px 2px #000;
   font-family: "Rock Salt", cursive;
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .js-box {
